<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_create_contact"
        android:icon="@drawable/ic_action_add"
        android:title="@string/create_contact"
        app:showAsAction="always" />
</menu>