...
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/temperature">

        <EditText
            android:id="@+id/temperature_to_convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/convert_to_f" />
    </LinearLayout>

    <TextView
        android:id="@+id/temperature_converted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:textSize="16sp" />
</LinearLayout>
...
