<resources>
    <string name="app_name">Android Test</string>

    <string name="unit_converter">Unit Converter</string>
    <string name="temperature">Temperature</string>
    <string name="convert_to_c">Convert to C</string>
    <string name="convert_to_f">Convert to F</string>
    <string name="temperature_c">Temperature: %1$s°C</string>
    <string name="temperature_f">Temperature: %1$s°F</string>

    <string name="contacts">Contacts</string>
    <string name="create_contact">Create Contact</string>
    <string name="edit_contact">Edit Contact</string>

    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="empty_field">This field must not be empty.</string>

    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
</resources>
